--- a/4.variables.yaml
+++ b/4.variables.yaml
@@ -1,9 +1,9 @@
 - name: variables
   hosts: local host
   vars: 
-    course: Ansible
-    Trainer: Sivakumar
-    Duration: 120hrs
+    course: "Ansible"
+    Trainer: "Sivakumar"
+    Duration: "120hrs"
   tasks: 
   - name: print information
     ansible.builtin.debug
