--- a/4.variables.yaml
+++ b/4.variables.yaml
@@ -1,10 +1,10 @@
 - name: variables
-  hosts: local host
-  vars: 
-    course: "Ansible"
-    Trainer: "Sivakumar"
-    Duration: "120hrs"
-  tasks: 
+  hosts: localhost
+  vars: #variable declaration
+    Course: "Terraform"
+    Trainer: "Siva"
+    Duration: "15hrs"
+  tasks:
   - name: print information
-    ansible.builtin.debug
-     msg: "i am learning {{course}} from Trainer {{Trainer}},Duration is {{Duration}}."
+    ansible.builtin.debug:
+      msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}."
