--- a/8.vars_inventory.yaml
+++ b/8.vars_inventory.yaml
@@ -1,8 +1,6 @@
 - name: variables
   hosts: localhost
-  vars:
-    inventory.yaml
   tasks:
   - name: print information
     ansible.builtin.debug:
-      msg: "Hi, my username {{USERNAME}} , password is {{PASSWORD}}"
+      msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}."
