--- a/inventory.ini
+++ b/inventory.ini
@@ -6,6 +6,6 @@
 
 
 [localhost:vars]
-Course: "Terraform"
-Trainer: "Siva"    
-Duration: "15hrs"
+Course= "Terraform"
+Trainer= "Siva"    
+Duration= "15hrs"
