--- a/8.vars_inventory.yaml
+++ b/8.vars_inventory.yaml
@@ -2,5 +2,8 @@
   hosts: localhost
   tasks:
   - name: print information
+    vars:
+  
+   
     ansible.builtin.debug:
       msg: "Hi, We are learning {{Course}} from Trainer {{Trainer}}, Duration is {{Duration}}."
