--- a/11.data_types.yaml
+++ b/11.data_types.yaml
@@ -1,17 +1,19 @@
 - name: data types
   hosts: localhost
   vars:
-    Course: DevOps with AWS #string
-    Tools: # list
+   course: Devops with AWS #string
+   Tools: #list
     - Linux
     - Shell
     - Ansible
-    Experience: # map or dictionary
-      DevOps: 3 # number
-      AWS: 2
-      Docker: 1
-    RealProject: true #boolean
+   Experience: # map or dictionary
+    Devops with AWS: 3 
+    Shell: 2
+    Docker: 1
+   RealProject: true #boolean
   tasks:
   - name: print variables
-    ansible.builtin.debug:
+    ansible.builtin.debug
+      msg: ""
+ ansible.builtin.debug:
       msg: "Course: {{Course}}, Tools covered: {{Tools}}, Experience is: {{Experience}}, is real project: {{RealProject}}"
