--- a/12.conditions.yaml
+++ b/12.conditions.yaml
@@ -5,14 +5,15 @@
    - name: check user exists or not
      ansible.builtin.command: id expense
      register: USER
-     ignore_errors: TURE
+     ignore_errors: true
    - name: print user information
      ansible.builtin.debug:
        msg: "User info: {{USER}}"
 
    - name: create user
      ansible.builtin.command: useradd expense
-      when: user.rc != 0
+     when: user.rc != 0
+     
    - name: say hello
      ansile.builtin.debug:
        msg: "hello"
