--- a/12.conditions.yaml
+++ b/12.conditions.yaml
@@ -12,7 +12,7 @@
 
    - name: create user
      ansible.builtin.command: useradd expense
-     when: user.rc != 0
+     when: USER.rc != 0
 
    - name: say Hello
      ansile.builtin.debug:
