--- a/12.conditions.yaml
+++ b/12.conditions.yaml
@@ -1,19 +1,20 @@
 - name: conditions
   hosts: web
   become: yes
-  tasks: 
-   - name: check user exists or not
-     ansible.builtin.command: id expense
-     register: USER
-     ignore_errors: true
-   - name: print user information
-     ansible.builtin.debug:
-       msg: "User info: {{USER}}"
+  tasks:
+  - name: check user exists or not
+    ansible.builtin.command: id expense
+    register: USER
+    ignore_errors: true
 
-   - name: create user
-     ansible.builtin.command: useradd expense
-     when: USER.rc != 0
+  - name: print user information
+    ansible.builtin.debug:
+      msg: "User info: {{USER}}"
 
-   - name: say Hello
-     ansile.builtin.debug:
-       msg: "Hello"
+  - name: create user
+    ansible.builtin.command: useradd expense
+    when: USER.rc != 0 #condition
+
+  - name: say Hello
+    ansible.builtin.debug:
+      msg: "Hello"
