--- a/14.default_filter.yaml
+++ b/14.default_filter.yaml
@@ -10,4 +10,4 @@
     vars: 
      greetings: "Hello morning"
     ansible.builtin.debug:
-       msg: " hello {{greetings | uppercase}}"
+       msg: " hello {{greetings | upper}}"
