--- a/14.default_filter.yaml
+++ b/14.default_filter.yaml
@@ -22,6 +22,11 @@
      numbers: [24,2,4,3,4]
     ansible.builtin.debug:
        msg: "{{ numbers | unique }}"
+  - name: min and max numbers
+    vars: 
+     numbers: [1,4,5,6,4,3]
+    ansible.builtin.debug:
+       msg: " minimum vale is {{ number | min }}and maximum number is {{number | max }}"
 
 
   
