--- a/15.loops.yaml
+++ b/15.loops.yaml
@@ -3,9 +3,9 @@
   become: yes
   tasks:
   - name: install packages 
-    ansible.builtin.debug:
-       name: "{{item.name}}"
-       state: "{{item.state}}"
+    ansible.builtin.dnf:
+      name: "{{item.name}}"
+      state: "{{item.state}}"
     loop:
     - { name: 'mysql',state: 'latest'}
     - { name: 'nginx' , state: 'latest'}
